--- a/voucher-subgraph/subgraph.template.yaml
+++ b/voucher-subgraph/subgraph.template.yaml
@@ -18,6 +18,7 @@ dataSources:
       language: wasm/assemblyscript
       entities:
         - Account
+        - Asset
         - Voucher
         - VoucherType
       abis:
