add subgraph deploy:prepare-manifest script

--- a/voucher-subgraph/package.json
+++ b/voucher-subgraph/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "codegen": "graph codegen",
+    "codegen": "cp subgraph.template.yaml subgraph.yaml && graph codegen",
     "build": "graph build",
     "create": "graph create --node ${GRAPHNODE_URL:-http://localhost:8020} bellecour/iexec-voucher",
     "remove": "graph remove --node ${GRAPHNODE_URL:-http://localhost:8020} bellecour/iexec-voucher",
-    "deploy": "graph deploy --node ${GRAPHNODE_URL:-http://localhost:8020} --ipfs ${IPFS_URL:-http://localhost:5001} bellecour/iexec-voucher --version-label ${VERSION_LABEL:-develop}",
+    "deploy:prepare-manifest": "sed -i \"s|#VOUCHER_HUB_ADDRESS#|address: \\\"$VOUCHER_HUB_ADDRESS\\\"|g\" subgraph.yaml && sed -i \"s|#VOUCHER_HUB_START_BLOCK#|startBlock: $VOUCHER_HUB_START_BLOCK|g\" subgraph.yaml",
+    "deploy": "npm run deploy:prepare-manifest && graph deploy --node ${GRAPHNODE_URL:-http://localhost:8020} --ipfs ${IPFS_URL:-http://localhost:5001} bellecour/iexec-voucher --version-label ${VERSION_LABEL:-develop}",
     "clean": "rm -rf generated && rm -rf build",
     "all": "npm run clean && npm run codegen && npm run build && npm run create && npm run deploy"
   },
