--- a/voucher-subgraph/subgraph.template.yaml
+++ b/voucher-subgraph/subgraph.template.yaml
@@ -1,5 +1,5 @@
 specVersion: 0.0.6
-description: Subgraph for dataProtector smart contract
+description: Subgraph for voucher smart contract
 
 schema:
   file: ./schema.graphql
