--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -85,7 +85,7 @@ services:
       start_period: 30s
 
   voucher-deployer:
-    image: voucher-deployer
+    # image: pierreiexec/voucher-deployer
     build:
       context: ..
       dockerfile: Dockerfile
