--- a/voucher-subgraph/package.json
+++ b/voucher-subgraph/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "@graphprotocol/graph-cli": "^0.71.1",
-    "@graphprotocol/graph-ts": "^0.35.1"
+    "@graphprotocol/graph-ts": "^0.35.1",
+    "@iexec/poco": "^5.3.0"
   }
 }
