instamine on test stack

--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     restart: "no"
     image: ghcr.io/foundry-rs/foundry:v1.0.0
     entrypoint: anvil
-    command: "--host 0.0.0.0 --port 8545 --block-time 1 --hardfork berlin --fork-url $BELLECOUR_FORK_URL --fork-block-number $BELLECOUR_FORK_BLOCK --chain-id 134 --gas-limit 6700000 --gas-price 0"
+    command: "--host 0.0.0.0 --port 8545 --hardfork berlin --fork-url $BELLECOUR_FORK_URL --fork-block-number $BELLECOUR_FORK_BLOCK --chain-id 134 --gas-limit 6700000 --gas-price 0"
     expose:
       - 8545
     ports:
