index voucher fundings

--- a/voucher-subgraph/subgraph.template.yaml
+++ b/voucher-subgraph/subgraph.template.yaml
@@ -20,6 +20,8 @@ dataSources:
         - Account
         - Voucher
         - VoucherType
+        - VoucherCreation
+        - VoucherTopUp
         - App
         - Dataset
         - Workerpool
