--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -93,8 +93,10 @@ services:
       RPC_URL: http://bellecour-fork:8545
       GRAPHNODE_URL: http://graphnode:8020
       IPFS_URL: http://ipfs:5001
-      SKIP_SUBGRAPH: $SKIP_SUBGRAPH
       FORCE_POCO_UPGRADE: $FORCE_POCO_UPGRADE
+      VOUCHER_HUB_ADDRESS: $VOUCHER_HUB_ADDRESS
+      VOUCHER_HUB_START_BLOCK: $VOUCHER_HUB_START_BLOCK
+      SKIP_SUBGRAPH: $SKIP_SUBGRAPH
     volumes:
       - ./out:/app/out
     depends_on:
